Fix visual IE 7 bugs
Two bugs here:

- Oganisations box was displayed behind the tabs on policy pages. Needed
  to add a z-index to the parent element which is at the same level as
  the tabs.
- Links in the scrolling navigation disapear when you scroll back to the
  top. This was due to the links getting top and left styles so they
  were positioned out of view. There was no reason for the links to be
  block level relativly positioned so they aren't anymore.

--- a/app/assets/stylesheets/frontend/helpers/_contextual-info.scss
+++ b/app/assets/stylesheets/frontend/helpers/_contextual-info.scss
@@ -36,8 +36,6 @@
     }
   }
   a {
-    position: relative;
-    display: inline-block;
     vertical-align: top;
   }
   p {
